@@ -1,5 +1,7 @@
 New entries should be added at the top
 
+2005-06-05 Fixed a TeX/LaTeX font discrepency in backend_ps. - DSD
+
 2005-06-05 Added a ps.distill option in rc settings. If True, postscript
            output will be distilled using ghostscript, which should trim
            the file size and allow it to load more quickly. Hopefully this
